# private-docs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  workflow.yml
.github/workflows/: github_pages.yml
docs/: advanced.md  features.md  index.md
docs/assets/js/: mermaid-init.js
nginx/: nginx.conf
nginx/conf.d/: default.conf
