[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.20",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-shadcn>=0.9.4",
    "pymdown-extensions>=10.16.1",
]
